v0.10.0/_sources/projections/nongeo/cartesian_linear.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/nongeo/cartesian_linear.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_projections_nongeo_cartesian_linear.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_nongeo_cartesian_linear.py:


Cartesian linear
================

**X**\ *width*\ [/*height*] or **x**\ *x-scale*\ [/*y-scale*]

Give the *width* of the figure and the optional *height*.
The lower-case version **x** is similar to **X** but expects
an *x-scale* and an optional *y-scale*.

The Cartesian linear projection is primarily designed for regular
floating point data. To plot geographical data in a linear
projection, see the upstream GMT documentation
:gmt-docs:`Geographic coordinates
<cookbook/coordinate-transformations.html#geographic-coordinates>`.
To make the linear plot using calendar date/time as input
coordinates, see the GMT documentation
:gmt-docs:`Calendar time coordinates
<cookbook/coordinate-transformations.html#calendar-time-coordinates>`.

.. GENERATED FROM PYTHON SOURCE LINES 21-38



.. image-sg:: /projections/nongeo/images/sphx_glr_cartesian_linear_001.png
   :alt: cartesian linear
   :srcset: /projections/nongeo/images/sphx_glr_cartesian_linear_001.png
   :class: sphx-glr-single-img





.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    fig.plot(
        # The x and y parameters determine the coordinates of lines
        x=[3, 9, 2],
        y=[4, 9, 37],
        pen="3p,red",
        # The region parameter sets the x and y ranges of the
        # Cartesian projection
        region=[0, 10, 0, 50],
        projection="X15c/10c",
        # "WSne" is passed to the frame parameter to put annotations
        # only on the left and bottom axes
        frame=["af", "WSne"],
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.430 seconds)


.. _sphx_glr_download_projections_nongeo_cartesian_linear.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: cartesian_linear.py <cartesian_linear.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: cartesian_linear.ipynb <cartesian_linear.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
